[package]
name = "wingc"
version = "0.1.0"
edition = "2021"

[lib]
name = "wingc"
path = "src/lib.rs"

[[bin]]
name = "wingc"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.20.6"
clap = { version = "3.2.6", features = ["derive"] }
sha2 = "0.10"
base16ct = { version = "0.1", features = ["alloc"] }
tree-sitter-winglang = { path = "./grammar" }
