[package]
name = "wingii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemafy_core = { version = "0.6.0" }
schemafy_lib = { version = "0.6.0" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1.7"
node-resolve = "2.2.0"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
anyhow = { version = "1" }
schemafy_core = { version = "0.6.0" }
schemafy_lib = { version = "0.6.0" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1.7"
structopt = { version = "0.3" }
tempfile = { version = "3" }
const_format = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
