[package]
name = "wingcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Customizing CLI colored output
anstyle = "1.0.6"
# Check for tty
atty = "0.2.14"
# Drop in replacement for std::path but with only utf-8
camino = "1.1.6"
# Command line argument parsing
clap = { version = "4.5.1", features = ["derive", "color"] }
strum = { version = "0.26.1", features = ["derive"] }
# Colors in terminal
termcolor = "1.4.1"
# Logging
tracing = "0.1.40"
# Compilation
wingc = { path = "../../libs/wingc" }
wingii = { path = "../../libs/wingii" }
