[package]
name = "tree-sitter-wing"
description = "Wing grammar for tree-sitter"
version = "0.0.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "wing"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/winglang/tree-sitter-wing"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
# Waiting for https://github.com/tree-sitter/tree-sitter/pull/3293 to be released
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter.git", rev = "a7a47d561d4e64eaf226f93c4d68076afa67fdda" }

[build-dependencies]
cc = "1.0.87"
