[package]
name = "wingc"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20.9"
tree-sitter-traversal = "0.1.2"
base16ct = { version = "0.2.0", features = ["alloc"] }
derivative = "2.2.0"
tree-sitter-wing = { path = "../tree-sitter-wing" }
wingii = { path = "../wingii" }
serde = "1.0"
serde_json = "1.0"
colored = "2.0"
lazy_static = "1.4.0"
globset = "0.4.9"
itertools = "0.10"
inflections = "1.1.1"
phf = { version = "0.11", features = ["macros"] }
indexmap = "1.9.1"
aho-corasick = "0.7.20"
lsp-types = "0.94.0"
indoc = "2.0.0"
const_format = "0.2.30"
duplicate = "1.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
uuid = { version = "1.3.2", features = ["fast-rng", "v4"] }
