[package]
name = "wingc"
version = "0.0.0"
edition = "2021"

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-traversal = "0.1"
derivative = "2.2"
tree-sitter-wing = { path = "../tree-sitter-wing" }
wingii = { path = "../wingii" }
serde = "1.0"
serde_json = "1.0"
colored = "2.0"
lazy_static = "1.4"
globset = "0.4"
itertools = "0.12"
phf = { version = "0.11", features = ["macros"] }
indexmap = { version = "2.0", features = ["serde"] }
aho-corasick = "1.1"
lsp-types = "0.95"
indoc = "2.0"
const_format = "0.2"
duplicate = "1.0"
strum = { version = "0.26", features = ["derive"] }
petgraph = "0.6"
camino = "1.1"
parcel_sourcemap = "2.1.1"
regex = "1"

[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
insta = { version = "1.33", features = ["yaml", "redactions"] }
uuid = { version = "1.4", features = ["fast-rng", "v4"] }
tempfile = "3.8"
