[package]
name = "wingii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0.25"
blake3 = "1.4.1"
rmp-serde = "1.1.1"

[dev-dependencies]
rand = "0.8.5"

