[package]
name = "wing-language-server"
version = "0.0.0"
edition = "2021"

[dependencies]
ropey = "1.3.2"
tree-sitter = "0.20.8"
serde_json = "1.0.78"
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
wingc = { path = "../../wingc" }
tree-sitter-winglang = { path = "../../wingc/grammar" }